--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
@@ -35,8 +35,10 @@
 
 	<div th:include="common/Header.html"></div>
 	<div th:include="common/hrAside.html"></div>
+	
 	<button onclick="history.back()">Back</button>
-    <form action="admin/hrCard/adminRegist" method="post">
+	
+    <form action="admin/hrCard/adminUpdate" method="post">
 	    <table class="tg">
 	    <colgroup>
 	    <col style="width: 100px">
@@ -52,7 +54,9 @@
 		        <td th:text="${ admin.adminNo }"></td>
 		        <td>이름</td>
 		        <td th:text="${ admin.adminName }"></td>
-		        <td colspan="2" rowspan="3"><img ></td>
+		        <td colspan="2" rowspan="3"><img width="100" height="120" 
+		        th:src="@{static/adminPicture/thumbnail/} + ${adminPicture.pictureSaveName}"/>
+		        </td>
 		      </tr>
 		      <tr>
 		        <td>ID</td>
@@ -77,13 +81,13 @@
 		     </tr>
 		     <tr>
 		        <td class="tg-wman">우편번호</td>
-		        <td class="tg-wman" th:text="${adminAddress.addressNo}"></td>
+		        <td class="tg-wman" th:text="${adminAddress.adminAddressNo}"></td>
 		        <td class="tg-wman">기본주소</td>
-		        <td class="tg-wman" colspan="3" th:text="${adminAddress.address}"></td>
+		        <td class="tg-wman" colspan="3" th:text="${adminAddress.adminAddress}"></td>
 		      </tr>
 		      <tr>
 		        <td class="tg-wman">상세주소</td>
-		        <td class="tg-wman" colspan="5" th:text="${adminAddress.detailAddress}"></td>
+		        <td class="tg-wman" colspan="5" th:text="${adminAddress.adminDetailAddress}"></td>
 		      </tr>
 		      <tr>
 		        <td>입사일</td>
@@ -101,28 +105,22 @@
 		        <td class="tg-wman">연차 사용 횟수</td>
 		        <td class="tg-wman" colspan="2" th:text="${ admin.adminUseAnnualVacation}"></td>
 		      </tr>
-		    </tbody>
-   	 </table>
-     <button type="button" id="confirm">승인</button> <button type="button" id="return">퇴사처리</button>
-
+		    </tbody>      
+   		 </table>
+	   	 <table>
+	   	 	<tr>
+	   	 		<td><button type="button" id="update">승인</button> </td>
+	   	 		
+	   	 		<td><button type="button" id="retireY">퇴사처리</button> </td>
+	   	 		
+	   	 		<td id="value" th:text="${admin.adminNo}" style="display: none"></td>
+	   	 	</tr>
+	     </table>
+     <!-- <button type="button" id="retireY" onclick="href='/admin/hrCard/Delete'">퇴사처리</button> -->
+	
     </form>
     
-    <script>
-      
-      $("#confirm").click(function(){
-      if(confirm("수정 하시겠습니까?")){
-         $("#confirmForm").submit();
-         }
-      });
-      
-      $("#return").click(function(){
-        if(confirm("삭제 하시겠습니까?")){
-           $("#confirmForm").attr("action", "/admin/hrCard/Delete");
-           $("#confirmForm").submit();
-         }
-        });
 
-      </script>
     
 </body>
 </html>
