--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
@@ -67,7 +67,7 @@
 	<div th:include="common/hrAside.html"></div>
 
 	<button onclick="history.back()">Back</button>
-    <form action="/admin/hrCard/adminRegist" method="post">
+    <form action="/admin/hrCard/adminRegist" method="post" enctype="multipart/form-data">
 	    <table class="tg" style=" table-layout: fixed; width: 597px">
 	    <colgroup>
 	    <col style="width: 100px">
@@ -83,7 +83,7 @@
 		        <td th:text="${ adminNo }"></td>
 		        <td>이름</td>
 		        <td><input type="text" name="adminName" required></td>
-		        <td colspan="2" rowspan="3"></td>
+		        <td colspan="2" rowspan="3"><img id="adminImg" width="100" height="120"></td>
 		      </tr>
 		      <tr>
 		        <td>ID</td>
@@ -105,7 +105,7 @@
 		        <td><input type="date" name="adminBirth" min="1950-01-01" max="2003-01-01" required></td>
 		        <td>성별</td>
 		        <td>
-		        	<select name="adminGender" style="text-align: center;">
+		        	<select name="adminGender" style="text-align: center;" required>
 		                <option value="F">여성</option>
 		                <option value="M">남성</option>
 		                <!-- <option value="총관리자">총관리자</option> -->
@@ -116,20 +116,25 @@
 		    <tbody>
 		      <tr>
 		        <td>이메일</td>
-		        <td colspan="3"><input type="text" name="email">@<input type="text" name="domain"></td>
-		        <td>퇴사여부</td>
-		        <td>N</td>
+		        <td colspan="3"><input type="text" name="adminEmail" required> @ 
+		        <select name="adminDomain" id="adminDomain" style="width: 100px; height: 25px;">
+	                    <option value="naver.com" selected>naver.com</option>
+	                    <option value="google.com">google.com</option>
+	                    <option value="hanmail.com">hanmail.com</option>
+	            </select>
+		        </td>
+		        <td colspan="2"><input type="file" id="thumbnailImg" name="thumbnailImg" onchange="loadImg(this,1)" style="display: none"></td>
 		      </tr>
 		      <tr>
 		        <td>우편번호</td>
-		        <td><input type="text" name="addressNo" id="zipCode" readonly></td>
+		        <td><input type="text" name="adminAddressNo" id="adminAddressNo" readonly></td>
 		        <td>기본주소</td>
-		        <td><input type="text" name="address" id="address1" readonly></td>
-		        <td colspan="2"><input type="button" value="검색" class="btn btn-yg" id="searchZipCode"></td>
+		        <td><input type="text" name="adminAddress" id="adminAddress" readonly></td>
+		        <td colspan="2"><input type="button" value="검색" class="btn btn-yg" id="searchAdminAddressNo"></td>
 		      </tr>
 		      <tr>
 		        <td>상세주소</td>
-		        <td colspan="5"><input type="text" name="detailAddress" id="address2"></td>
+		        <td colspan="5"><input type="text" name="adminDetailAddress" id="adminDetailAddress" required></td>
 		      </tr>
 		      <tr>
 		        <td>입사일</td>
@@ -140,7 +145,7 @@
 		      <tr>
 		        <td>직책</td>
 		        <td colspan="2">
-		        	<select name="adminJob" style="text-align: center;">
+		        	<select name="adminJob" style="text-align: center;" required>
 		                <option value="일반관리자">일반관리자</option>
 		                <option value="인사관리자">인사관리자</option>
 		                <option value="재정담당자">재정담당자</option>
@@ -154,19 +159,21 @@
 		      <tr>
 		        <td>연차 사용 횟수</td>
 		        <td colspan="2">-</td>
+		        <td>퇴사여부</td>
+		        <td colspan="2">N</td>
 		      </tr>
 		    </tbody>
 		    </table>
 	    <input class="btn_hrcard" type="submit" value="등록완료">
+	    <input class="btn_hrcard" type="reset" value="등록취소">
 	    <input name="adminId" type="hidden" th:value="${ adminId }">
-	    <input name="adminNo" type="hidden" th:value="${ adminNo }">
   </form>
   
   <!-- 참고 링크 : http://postcode.map.daum.net/guide -->
 	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script>
-		const $searchZipCode = document.getElementById("searchZipCode");
-		/* const $goMain = document.getElementById("goMain"); */
+		const $searchZipCode = document.getElementById("searchAdminAddressNo");
+		const $goMain = document.getElementById("goMain");
 		
 		$searchZipCode.onclick = function() {
 		
@@ -175,23 +182,59 @@
 				oncomplete: function(data){
 					
 					/* 팝업에서 검색결과 항목을 클릭했을 시 실행할 코드를 작성하는 부분 */
-					document.getElementById("zipCode").value = data.zonecode;
-					document.getElementById("address1").value = data.address;
-					document.getElementById("address2").focus();
+					document.getElementById("adminAddressNo").value = data.zonecode;
+					document.getElementById("adminAddress").value = data.address;
+					document.getElementById("adminDetailAddress").focus();
 				}
 			}).open();
 		}
 		
-		/* $goMain.onclick = function() {
+		$goMain.onclick = function() {
 			location.href = "${ pageContext.servletContext.contextPath }";
-		} */
+		} 
 		
-		/* const handlePress = (e) => {
+		const handlePress = (e) => {
 	        const regex = /^[0-9\b -]{0,13}$/;
 	        if (regex.test(e.target.value)) {
 	            setTel(e.target.value);
 	        }
-	    }; */
+	    };
 	</script>
+	
+	<script>
+			
+			/* 이미지 미리보기 관련 스크립트 */
+			const $adminImg = document.getElementById("adminImg");
+			
+			$adminImg.onclick = function() {
+				document.getElementById("thumbnailImg").click();
+			}
+	
+			/* 이미지 미리보기 관련 함수(File API 활용하기) */
+			function loadImg(value, num) {
+				
+				/* https://developer.mozilla.org/ko/docs/Web/API/FileReader 참고 (MDN 사이트 참고)*/
+				if (value.files && value.files[0]) {			// value.files[0]는 파일 이름
+					const reader = new FileReader();
+				
+					/*
+						FileReader 객체는 웹 애플리케이션이 비동기적으로 데이터를 읽기 위하여 읽을 파일을 가리키는 File 혹은 Blob 객체를
+						이용해 파일의 내용을(혹은 raw data버퍼로) 읽고 사용자의 컴퓨터에 저장하는 것을 가능하게 하는 것	
+						Blob(Binary large object) : 파일류의 불변하는 미가공 데이터로 텍스트와 이진 데이터의 형태로 읽을 수 있음
+					*/
+//					reader.readAsText(value.files[0]);			// 텍스트 파일을 읽을 때 사용 (이미지 파일을 텍스트로 읽어서 글자가 깨짐)			
+//					reader.readAsArrayBuffer(value.files[0]);	// 데이터를 일정한 크기로 조금씩(파일을 표현하는 ArrayBuffer) 서버로 보낼 때
+//					reader.readAsBinaryString(value.files[0]);	// 이진 데이터를 서버로 보낼 때 사용
+					reader.readAsDataURL(value.files[0]);		// Base64방식으로 파일을 FileReader에 전달 (Base64로 인코딩한 것은 브라우저가 원래 데이터로 만들게 됨)
+					
+					/* load 이벤트의 핸들러로 읽기 동작이 성공적으로 완료 되었을 때마다 발생한다. */
+					reader.onload = function(e) {				// load EventListener에 function 등록 (FileReader에서 전달 받은 파일을 다 읽으면 리스너에 등록한 function이 호출 됨)
+							document.getElementById("adminImg").src = e.target.result;
+							
+						}
+					}
+				}
+			
+		</script>
 </body>
 </html>
