--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -24,7 +24,19 @@
 	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
 	<button onclick="location.href='/admin/select/vacation'">나의 휴가 조회</button>
 	<button onclick="location.href='/admin/hr/select/Allvacation'">휴가 전체 조회</button>
+	 <br>
+	 <br>
+	 <hr>
+	 <br>
+	 <br>
 	 
+	<h3>관리자 메인 페이지</h3>
+		<script>
+		console.log("관리자")
+		</script>
+		
+		<input type="button" onclick="location.href='/admin/hrCard/adminList'">
+		<input value="직원등록" type="button" onclick="location.href='/admin/hrCard/adminRegist'">
 	 <!-- <div th:include="admin/adminAside.html"></div> -->
 	 
 </body>
