--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -10,34 +10,218 @@
     	th:href="@{/css/employee/checklist/checkList.css}">
    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+<!--     <script src='/js/checklistCheckBox.js'></script> -->
+<!--  <script src='/js/checklistFile.js'></script>   -->
+<!--     <script src='/js/checklistCanvas.js'></script> -->
 </head>
 <body>
 	<section>
-		<form method="post" action="/employee/checkList/update">
+		<form method="post" action="/employee/checkList/update"  enctype="multipart/form-data">
 			<input type="hidden" th:value="${ checkList.checkReservationNo }" class="reservationNo" name="reservationNo">
-			<input type="hidden" th:value="${ checkList.checkHTML }" th:utext="${ checkList.checkHTML }" class="jbHtml" name="jbHtml">
-			<input id="submitButton" type="submit" value="테스트">
+			
+			<p th:utext="${ checkList.checkHTML }" class="jbHtml"></p>			
+			
+			<div class="content-img-area1" id="contentImgArea1">
+				<img id="beforeImg" width="100" height="120">
+			</div>
+			<div class="content-img-area2" id="contentImgArea2">
+ 	        	<img id="afterImg" width="100" height="120">
+			</div>
+			
+			<div class="thumbnail-file-area">
+		        <input type="file" id="thumbnailImg1" name="beforeThumbnailImg" onchange="loadImg(this,1)" style="display: none">
+           		<input type="file" id="thumbnailImg2" name="afterThumbnailImg" onchange="loadImg(this,2)" style="display: none">
+			</div>
+			<br><br>				
+			
+            <div style="width:300px; height:300px;">    
+                <canvas id="canvas" style="border:1px solid black"></canvas>  
+            </div> 
+            <div class="canvasbtn">    
+	        	<button id="reset" class="savebtn col-xl-3">취소</button>
+	        </div> 
+	       
+			<input type="button" id="submitButton" value="test">	        
+
 		</form>
 	</section>
 	 	
+	<!-- submit script -->
     <script>
 	    
 	    const jbHtml = "";
     	document.getElementById("submitButton").onclick = function(){
-		    const reservationNo = $('.reservationNo').val();
+			const reservationNo = $('.reservationNo').val();
     			const jbHtml = $( 'section' ).html();
-    			
-    			console.log(reservationNo)
     			console.log(jbHtml)
-    		 if(confirm("체크리스트를 전송하시겠습니까?")){
-    			 submit();
-/*      			 location.href="/employee/checkList/update?jbHtml="+jbHtml + "&reservationNo=reservationNo" + reservationNo;   */
-     		/* 	 location.href="/employee/checkList/update?jbHtml="+jbHtml;   */
-    			 alert("전송 완료");
+    		if(confirm("체크리스트를 전송하시겠습니까?")){
+    			$.ajax({
+    				url: "/employee/checkList/update",
+    				type:"POST",
+    				data:{
+    					jbHtml : jbHtml,
+    					reservationNo : reservationNo
+    				},
+    				success: function(data){
+		    			alert("전송 완료");
+						location.href="/employee/task/selectMyTask"
+    				},
+    				error : function(request, status){
+    					alert("전송 실패")
+    				}
+    			})
     		 }
     	}
 
     </script>	 	
+
+	<!-- fileupload script -->
+	<script>
+	const $contentImgArea1 = document.getElementById("contentImgArea1");
+	const $contentImgArea2 = document.getElementById("contentImgArea2");
+	
+	$contentImgArea1.onclick = function() {
+				document.getElementById("thumbnailImg1").click();
+			}
+	$contentImgArea2.onclick = function() {
+				document.getElementById("thumbnailImg2").click();
+			}
+	
+	function loadImg(value, num) {
+				
+		if (value.files && value.files[0]) {			
+			const reader = new FileReader();
+					
+			reader.readAsDataURL(value.files[0]);		
+						
+			reader.onload = function(e) {	
+				switch(num){
+					case 1:
+						document.getElementById("beforeImg").src = e.target.result;
+						break;
+					case 2:
+						document.getElementById("afterImg").src = e.target.result;
+						break;
+				}
+								
+			}
+		}
+	}
+	</script>
+	
+	<!-- checkbox sciprt -->
+	<script>
+		$("input[type='checkbox']").each(function(){
+			if($(this).is(":checked") == true){
+				$(this).val("YES");
+			} else if($(this).is(":checked") == false){
+				$(this).val("NOT")
+			}
+		});
+		
+		$("input[type='checkbox']").change(function(){
+			if($(this).is(":checked") == true){
+				$(this).val("YES");
+			} else{
+				$(this).val("NOT");
+			}
+		});
+		
+	</script>
+	
+	<!--  canvas script -->
+	<script>
+	window.onload = function() {
+		(function(obj){      
+		                    obj.init();      
+		                    $(obj.onLoad);
+		                })
+		                    ((function(){      
+		                        var canvas = $("#canvas");      
+		                        var div = canvas.parent("div");      
+		
+		                        var ctx = canvas[0].getContext("2d");      
+		                        var drawble = false;            
+		
+		                        function canvasResize(){        
+		                            canvas[0].height = div.height();        
+		                            canvas[0].width = div.width();      
+		                        }      
+		
+		                        // PC 
+		                        function draw(e){        
+		                            function getPosition(){          
+		                                return {            
+		                                    X: e.pageX - canvas[0].offsetLeft,             
+		                                    Y: e.pageY - canvas[0].offsetTop          
+		                                }        
+		                            }        
+		                            switch(e.type){          
+		                                case "mousedown":{            
+		                                    drawble = true;            
+		                                    ctx.beginPath();            
+		                                    ctx.moveTo(getPosition().X, 
+		                                    getPosition().Y);          
+		                                }     
+		
+		                                break;          
+		                                
+		                                case "mousemove":{            
+		                                    if(drawble){              
+		                                        ctx.lineTo(getPosition().X, 
+		                                        getPosition().Y);              
+		                                        ctx.stroke();            
+		                                    }          
+		                                }          
+		                                
+		                                break;          
+		                                
+		                                case "mouseup":          
+		                                case "mouseout":{            
+		                                    drawble = false;            
+		                                    ctx.closePath();          
+		                                }          break;        
+		                            }      
+		                        }       
+		
+		                        return {init: function(){          
+		                            $(window).on("resize", canvasResize);                    
+		                            canvas.on("mousedown", draw);          
+		                            canvas.on("mousemove", draw);          
+		                            canvas.on("mouseup", draw);          
+		                            canvas.on("mouseout", draw);  
+		
+		                            // save 버튼을 누르면 imageupload.php로 base64코드를 보내서 이미지로 변환합니다.          
+		                            
+		                            $("#save").on("click", function(){            
+		                                // a 태그를 만들어서 다운로드를 만듭니다.            
+		                                var link = document.createElement('a');             
+		                                // base64데이터 링크 달기            
+		                                link.href = canvas[0].toDataURL("image/png");             
+		                                // 다운로드시 파일명 지정            
+		                                link.download = "image.png";             
+		                                // body에 추가            
+		                                document.body.appendChild(link);             
+		                                link.click();             
+		                                document.body.removeChild(link);             
+		                                // 다운로드용 a 태그는 다운로드가 끝나면 삭제합니다.            
+		                                form.remove();          
+		                            });        
+		                            
+		                            $("#reset").on("click", function(){
+		
+		                                ctx.clearRect(0, 0, 800, 600);
+		                            })
+		
+		                        },        
+		                        
+		                        onLoad: function(){          
+		                            canvasResize();        
+		                            }}})());  
+			
+							
+	};						
+	</script>
 
 </body>
 </html>
