--- a/com-project-clean/src/main/resources/templates/pay/adminPaySelect.html
+++ b/com-project-clean/src/main/resources/templates/pay/adminPaySelect.html
@@ -3,7 +3,7 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" th:href="@{/css/common/pay/employeePaySelectInfo.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/pay/adminPaySelect.css}">
 <title>Insert title here</title>
 <style>
 	tr:nth-of-type(1){background: #9AE8F9;}
@@ -24,10 +24,10 @@
 	           <th>지급날짜</th>
 	        </tr>
 	        <tr th:each="pay : ${ adminPayList }">
-	          <td height="35px" th:text="${ pay.admin.adminName }"></td> 
-	          <td th:text="${ pay.admin.adminJob }"></td> 
-	          <td th:text="${ pay.admin.adminPhone }"></td> 
-	          <td th:text="${ pay.payAdminDate }"></td>
+	          <td height="35px" th:text="${ pay.admin.adminName }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
+	          <td th:text="${ pay.admin.adminJob }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
+	          <td th:text="${ pay.admin.adminPhone }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
+	          <td th:text="${ pay.payAdminDate }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td>  
 	        </tr>
     	</table>
     	<br>
@@ -39,6 +39,8 @@
 						id="searchCondition" name="searchCondition">
 						<option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
 						<option value="adminJob" th:selected="${ searchCondition } == 'adminJob'">직급</option>
+						<option value="adminPhone" th:selected="${ searchCondition } == 'adminPhone'">전화번호</option>
+						<option value="payAdminDate" th:selected="${ searchCondition } == 'payAdminDate'">지급날짜</option>
 					</select> 
 				<input type="hidden" name="currentPage" value="1">
 				<input type="search" id="name" name="searchValue" th:value="${selectCriteria.searchValue}">
