--- a/com-project-clean/src/main/resources/templates/pay/surcharge.html
+++ b/com-project-clean/src/main/resources/templates/pay/surcharge.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-<link rel="stylesheet" type="text/css" th:href="@{/css/common/pay/surcharge.css}"> 
+<link rel="stylesheet" type="text/css" th:href="@{/css/pay/surcharge.css}"> 
 <title>Insert title here</title>
 </head>
 <body>
