--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
@@ -1,83 +1,44 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
->
+<html xmlns:th="https://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <title>Project Clean</title>
-    <link rel="stylesheet"
-    	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" type="text/css"
-    	th:href="@{/css/employee/checklist/checkList.css}">
-   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
-<!--     <script src='/js/checklistCheckBox.js'></script> -->
-<!--  <script src='/js/checklistFile.js'></script>   -->
-<!--     <script src='/js/checklistCanvas.js'></script> -->
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
+<link rel="stylesheet" type="text/css"
+	th:href="@{/css/employee/checklist/checkList.css}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+
 </head>
 <body>
-	<section>
-		<form method="post" action="/employee/checkList/update"  enctype="multipart/form-data">
-			<input type="hidden" th:value="${ checkList.checkReservationNo }" class="reservationNo" name="reservationNo">
-			
-			<p th:utext="${ checkList.checkHTML }" class="jbHtml"></p>			
-			
-			<div class="content-img-area1" id="contentImgArea1">
-				<img id="beforeImg" width="100" height="120">
-			</div>
-			<div class="content-img-area2" id="contentImgArea2">
- 	        	<img id="afterImg" width="100" height="120">
-			</div>
-			
-			<div class="thumbnail-file-area">
-		        <input type="file" id="thumbnailImg1" name="beforeThumbnailImg" onchange="loadImg(this,1)" style="display: none">
-           		<input type="file" id="thumbnailImg2" name="afterThumbnailImg" onchange="loadImg(this,2)" style="display: none">
-			</div>
-			<br><br>				
-			
-            <div style="width:300px; height:300px;">    
-                <canvas id="canvas" style="border:1px solid black"></canvas>  
-            </div> 
-            <div class="canvasbtn">    
-	        	<button id="reset" class="savebtn col-xl-3">취소</button>
-	        </div> 
-	       
-			<input type="button" id="submitButton" value="test">	        
 
-		</form>
-	</section>
-	 	
-	<!-- submit script -->
-    <script>
-	    
-	    const jbHtml = "";
-    	document.getElementById("submitButton").onclick = function(){
-			const reservationNo = $('.reservationNo').val();
-    			const jbHtml = $( 'section' ).html();
-    			console.log(jbHtml)
-    		if(confirm("체크리스트를 전송하시겠습니까?")){
-    			$.ajax({
-    				url: "/employee/checkList/update",
-    				type:"POST",
-    				data:{
-    					jbHtml : jbHtml,
-    					reservationNo : reservationNo
-    				},
-    				success: function(data){
-		    			alert("전송 완료");
-						location.href="/employee/task/selectMyTask"
-    				},
-    				error : function(request, status){
-    					alert("전송 실패")
-    				}
-    			})
-    		 }
-    	}
+<section>
+	<form method="post" action="#"  enctype="multipart/form-data">
+	
+		<input type="hidden" th:value="${checkList.checkReservationNo}" class="reservationNo" name="reservationNo"> 
+		
+		<p th:utext="${checkList.checkHTML}" class="jbHtml"></p>			
+		
+		<br><br>				
+		
+        <div class="OpnionArea">
+	        <th:block sec:authorize="hasRole('ADMIN')">
+		        <div class="adminOpnionArea">
+		            <label>관리자 의견</label><br>
+		            <textarea class="Opnion" cols="100%" rows="3"></textarea>
+		            <br>
+		            <input type="button" value="등록">
+		        </div>
+			</th:block>
+        </div>
+        
+	</form>
+</section>
 
-    </script>	 	
-
-	<!-- fileupload script -->
-	<script>
+<!-- fileupload script -->
+<script>
 	const $contentImgArea1 = document.getElementById("contentImgArea1");
 	const $contentImgArea2 = document.getElementById("contentImgArea2");
 	
@@ -108,30 +69,19 @@
 			}
 		}
 	}
-	</script>
-	
-	<!-- checkbox sciprt -->
-	<script>
-		$("input[type='checkbox']").each(function(){
-			if($(this).is(":checked") == true){
-				$(this).val("YES");
-			} else if($(this).is(":checked") == false){
-				$(this).val("NOT")
-			}
-		});
-		
-		$("input[type='checkbox']").change(function(){
-			if($(this).is(":checked") == true){
-				$(this).val("YES");
-			} else{
-				$(this).val("NOT");
-			}
-		});
-		
-	</script>
-	
-	<!--  canvas script -->
-	<script>
+</script>
+
+<!-- checkbox sciprt -->
+<script>
+	$("input[type='checkbox']").each(function(){
+		if(this.val(value) == "NOT"){
+			console.log("오")
+		}
+	})
+</script>
+
+<!--  canvas script -->
+<script>
 	window.onload = function() {
 		(function(obj){      
 		                    obj.init();      
@@ -222,7 +172,8 @@
 			
 							
 	};						
-	</script>
+</script>
+
 
 </body>
 </html>
