2022/07/16 recover code after change DB(delete 3 table, add column)

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registMainEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registMainEmployee.html
@@ -129,6 +129,8 @@
 	                    	</select>-
 	                    	<input type="text" id="employeePhone2" name="employeePhone2" class="required" maxlength='4' required>-
 	                    	<input type="text" id="employeePhone3" name="employeePhone3" class="required" maxlength='4' required>
+	                    	<input style="display: none;" type="text" id="employeePhone" name="employeePhone">
+	                    	
 	                    </td>
 	                  </tr>
 	                  <tr>
@@ -141,28 +143,31 @@
 	                <tbody>
 	                  <tr>
 	                    <td class="tg-7btt">이메일</td>
-	                    <td class="tg-7btt" colspan="3"><input type="text" id="employeeEmail" class="required" name="employeeEmail" required style="width: 200px;"> @ 
-	                      <select name="employeeDomain" id="employeeDomain" style="width: 100px; height: 25px;">
+	                    <td class="tg-7btt" colspan="3"><input type="text" id="email" class="required" name="email" required style="width: 200px;"> @ 
+	                      <select name="domain" id="domain" style="width: 100px; height: 25px;">
 	                    <option value="naver.com" selected>naver.com</option>
 	                    <option value="google.com">google.com</option>
 	                    <option value="hanmail.com">hanmail.com</option>
 	                      </select>
+	              		<td class="tg-7btt"style="display: none;"><input id="employeeEmail" name="employeeEmail" type="text"/></td>
 	                  </td>
 	                    <td class="tg-7btt"> <button type="button" id="pictureRegist" name="pictureRegist">등록</button> </td>
 	                    <td class="tg-7btt"> <button type="button"id="pictureDelete" name="pictureDelete">삭제</button> </td>
 	                  </tr>
 	                  <tr>
 	                    <td class="tg-7btt">우편번호</td>
-	                    <td class="tg-7btt"><div id="AddressNo"></div></td>
-	                    <td class="tg-7btt"style="display: none;"><input id="employeeAddressNo" type="number" name="employeeAddressNo"/></td>
+	                    <td class="tg-7btt"><div id="addressNo"></div></td>
+	                    <td class="tg-7btt"style="display: none;"><input id="employeeAddressNo" type="number" name="addressNo"/></td>
 	                    <td class="tg-7btt">기본주소</td>
-	                    <td class="tg-7btt"><div id="Address"></div></td>
-	                    <td class="tg-7btt"style="display: none;"><input type="text" id="employeeAddress" name="employeeAddress" /></td>
+	                    <td class="tg-7btt"><div id="address"></div></td>
+	                    <td class="tg-7btt"style="display: none;"><input type="text" id="address" name="address" /></td>
 	                    <td class="tg-7btt" colspan="2"><button type="button" id="findAddress">주소찾기</button></td>
 	                  </tr>
 	                  <tr>
 	                    <td class="tg-7btt">상세주소</td>
-	                    <td class="tg-7btt" colspan="5"><input type=text id="addressDetail" class="required" name="employeeDetailAddress" required></td>
+	                    <td class="tg-7btt" colspan="5"><input type=text id="addressDetail" class="required" name="addressDetail" required></td>
+	                    <td class="tg-7btt"style="display: none;"><input id="employeeAddress" name="employeeAddress" type="text"/></td>
+	                    
 	                  </tr>
 	                  <tr>
 	                    <td class="tg-7btt">입사일</td>
@@ -186,7 +191,7 @@
 	                  <tr>
 	                    <td colspan="6" class="button" style="border-left: none; border-right: none; border-bottom: none;">
 	                        <button type="button" id="regist">등록 확인</button>
-	                        <button type="reset" id="reset">초기화</button>
+	                        <button type="button" id="resetButton">초기화</button>
 	                    </td>
 	                  </tr>
 	                </tbody>
@@ -301,27 +306,36 @@
     <script>
     /* 회원 수정 정보 */
   	$("#regist").click(function(){
-  		const no = $("#employeeNo").text();
-  		const name = $("#employeeName").val();
+  		const phone1 = $("#employeePhone1").val();
   		const phone2 = $("#employeePhone2").val();
   		const phone3 = $("#employeePhone3").val();
+  		const no = $("#employeeNo").text();
+  		const name = $("#employeeName").val();
   		const birth = $("#employeeBirth").val();
-  		const email = $("#employeeEmail").val();
-		const addressNo = $("#AddressNo").text();
-		const address = $("#Address").text();
+  		const email = $("#email").val();
+  		const domain = $("#domain").val();
+  		
+		const addressNo = $("#addressNo").text();
+		const address = $("#address").text();
   		const addressDetail = $("#addressDetail").val();
   		
   			if(!(name && phone2 && phone3 && birth && email && addressNo && addressDetail)){
   				alert("입력되지 않은 항목이 있습니다.");
   			}else{
 			if(confirm("등록하시겠습니까?")){
-				$('#employeeAddressNo').attr('value', addressNo );
-				$('#employeeAddress').attr('value', address );
+				$('#employeePhone').attr('value', phone1 +"-"+ phone2 +"-"+ phone3 );
+				$('#employeeAddress').attr('value', addressNo + "@" + address + "@" + addressDetail);
+				$('#employeeEmail').attr('value', email + "@" + domain);
 				$("#registForm").submit();
   				
   			}
   		}
 	})  
+	$("#resetButton").click(function(){
+		if(confirm("초기화 하시겠습니까?")){
+			document.getElementById("registForm").reset();
+		}
+	})
 	
 	/* 핸드폰 번호 정규표현식 */
 	
@@ -379,8 +393,8 @@
                     var roadAddr = data.roadAddress; // 도로명 주소 변수
 
                     // 우편번호와 주소 정보를 해당 필드에 넣는다.
-                    $("#Address").text(roadAddr);
-                    $("#AddressNo").text(data.zonecode);
+                    $("#address").text(roadAddr);
+                    $("#addressNo").text(data.zonecode);
                 }
             }).open();
         }
