--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -22,7 +22,7 @@
 	</div>
 	<button onclick="location.href='/admin/boss/regist/employee'">직원 대기중(관리자boss)</button>
 	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
-	<button onclick="location.href='/admin/select/vacation'">나의 휴가 조회</button>
+	<button onclick="location.href='/admin/select/selectMyVacationDetail'">나의 휴가 조회</button>
 	<button onclick="location.href='/admin/hr/select/Allvacation'">휴가 전체 조회</button>
 	 <br>
 	 <br>
