--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacation.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 
 <style type="text/css">
-    /* 결재 라인 */
+  
     .tg  {border-collapse:collapse;border-spacing:0;}
       .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:12px;
         overflow:hidden;padding:5px;word-break:normal;}
@@ -59,85 +59,43 @@
 </head>
 <body>
     <div class="container">
-        <div class="confirmDateContainer">
-            <table class="tg confirmTable" style="table-layout: fixed; width: 588px">
-              <colgroup>
-                <col style="width: 186px">
-                <col style="width: 201px">
-                <col style="width: 201px">
-              </colgroup>
-              <thead>
-                <tr>
-                  <td class="tg-amwm">결재 신청 날짜</td>
-                  <td class="tg-amwm" colspan="2">
-                    <div name="confirmDate"> yyyy-MM-dd</div>
-                  </td>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="tg-amwm confirmHeight" rowspan="3">결재</td>
-                  <td class="tg-amwm">인사담당자</td>
-                  <td class="tg-amwm">대표</td>
-                </tr>
-                <tr class="comfirmBox">
-                  <td class="tg-amwm">
-                    <div id="humanResource" name="humanResource"></div>
-                  </td>
-                  <td class="tg-amwm">
-                    <div id="boss" name="boss"></div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="tg-amwm">yyyy-MM-dd</td>
-                  <td class="tg-amwm">yyyy-MM-dd</td>
-                </tr>
-              </tbody>
-            </table>
-    </div>
+      <div id="tab-1" class="tab-content current">
+        <span>나의 휴가 조회</span>
 
-    <div class="registVacationContainer">
-        <table class="tg2" style="table-layout: fixed; width: 502px">
-            <colgroup>
-            <col style="width: 250px">
-            <col style="width: 450px">
-            </colgroup>
+        <select name="category" id="category">
+            <option value="empNo" selected>사원번호</option>
+            <option value="empName">이름</option>
+            <option value="empBirth">생년월일</option>
+            <option value="empAddress">주소</option>
+            <option value="empPhone">전화번호</option>
+        </select>
+        <input type="text" name="categoryValue">
+        <button type="button" id="search">검색</button>
+
+        <table id="employeeList" border="1">
             <thead>
-              <tr>
-                <th class="tg2-7btt" colspan="2">휴가신청서</th>
-              </tr>
+                <tr>
+                    <th>신청번호</th>
+                    <th>신청날짜</th>
+                    <th>휴가시작일</th>
+                    <th>휴가종료일</th>
+                    <th>휴가구분</th>
+                    <th>진행상태</th>
+                </tr>
             </thead>
             <tbody>
-              <tr>
-                <td class="tg2-7btt">성명</td>
-                <td class="tg2-7btt">유한조</td>
-              </tr>
-              <tr>
-                <td class="tg2-7btt">직급</td>
-                <td class="tg2-7btt">사원</td>
-              </tr>
-              <tr>
-                <td class="tg2-7btt">휴가명</td>
-                <td class="tg2-7btt">월차</td>
-              </tr>
-              <tr>
-                <td class="tg2-7btt">기간</td>
-                <td class="tg2-7btt">2022-08-28 ~ 2024-08-28</td>
-              </tr>
-              <tr>
-                <td class="tg2-7btt">연락망</td>
-                <td class="tg2-7btt">010-1111-1111</td>
-              </tr>
-              <tr>
-                <td class="tg2-7btt"><div class="reason">사유</div></td>
-                <td class="tg2-7btt"><div class="reason">휴가 신청합니다.</div></td>
-              </tr>
-              <tr>
-                <td class="tg2-7btt" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
-              </tr>
+            <c:forEach varStatus="index" items="${requestScope.data}">
+                <tr>
+                  <td>${ index.vacationNo }</td>
+                  <td>${ index.vacationName }</td>
+                  <td>${ index.vacationStart }</td>
+                  <td>${ index.vacationEnd }</td>
+                  <td>${ index.vacationDivision }</td>
+                  <td>${ index.vacationStatus }</td>
+                </tr>
+            </c:forEach>
             </tbody>
-            </table>
-
+        </table>
     </div>
     </div>
 </body>
